--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -12,6 +12,7 @@
   --color-primary-hover: #7b4de8;
   --color-text: #e4e4e4;
   --color-accent: #b0b0ff;
+  --color-container-hover: #0F0F1A;
 
   --radius-sm: 0.25rem;
   --radius-md: 0.5rem;
