Calendar Popup fix, enabled Cache

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -142,7 +142,9 @@
     </div>
 </div>
 
-<div id="viewModal" class="modal hidden fixed inset-0 z-50 flex items-center justify-center bg-[rgba(15,15,30,0.9)]"></div>
+<div id="viewModal" class="hidden popup-overlay">
+
+</div>
 
 
 <!-- Scripts -->
