--- a/src/main/resources/static/css/settings.css
+++ b/src/main/resources/static/css/settings.css
@@ -590,7 +590,6 @@ video {
 
 .popup-container {
   display: flex;
-  width: 95vw;
   max-width: 32rem;
   flex-direction: column;
   gap: 1rem;
@@ -600,4 +599,16 @@ video {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  width: 90vw;
+  max-height: 80vh;
+  overflow-y: auto;
+}
+
+#previewContainer {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  max-height: 60vh;
+  overflow: auto;
 }
