--- a/src/main/resources/static/css/settings.css
+++ b/src/main/resources/static/css/settings.css
@@ -606,9 +606,16 @@ video {
 
 #previewContainer {
   display: flex;
-  width: 100%;
   align-items: center;
   justify-content: center;
   max-height: 60vh;
   overflow: auto;
+  width: 100%;
 }
+
+.user-label:has(input:checked) {
+  border: 2px solid var(--color-primary);
+  border-radius: 0.5rem;
+  background-color: var(--color-bg);
+}
+
